# Prometheus-Praxis

./: .gitignore  .platform_continuity_anchor.json  ARCHITECTURE.md  Artifact-Type-Role-KERplanescoordinates-Laneimpact.csv  CONTRIBUTING.md  CONTRIBUTING_AI_CHAT.md  Cargo.toml  CaseID-rcalibprev-rcalibnext-KprevKnext-EprevEnext.csv  Condition-Decision-Notes.csv  EcoNet Authorship Header v0  EducationMultiplierKernel2026v1.aln  LICENSE  MIGRATION.md  Makefile  README.md  RustALNartifact-Scope-LinkedSQLpurpose.csv  TOOLING_LAYOUT.txt  TREE.txt  a.md  aln_migration.py  bostrom_did_inventory.csv  bostrom_identity_audit_2026-05-12.csv  build.gradle.kts  clippy.toml  clippy_research_ci.toml  config.yaml  docker-compose.yml  eco-wealth-advancement-queries.md  eco_response_shard-advancement-questions.md  econet_econet_steard_wealth.sql  ecosafety.dataqualityinvariants.v1.aln  frozen_schemas_verification.csv  health_data_labor_policy.sql  migration_audit_final.csv  ppx.function.meta.v1.aln  repository_directory_mapping.csv
contracts/bee-corridor/: Cargo.toml
contracts/nanoswarm-telemetry/: Cargo.toml
crates/agent-registry/: Cargo.toml
crates/ai_chat_hashonly_normalizer/: Cargo.toml
crates/ai_node_shard/: Cargo.toml  README.md
crates/ai_plane_ci_guard/: Cargo.toml
crates/aln-definition-registry/: Cargo.toml
crates/alncore/: -Concept-Existingspineobjectsituses-Hardsafetypred.csv  Cargo.toml  Layer-Inputsignal-Predicateinvariant-Output.csv  README.md
crates/alncore_macros/: Cargo.toml
crates/beecorridor-ledger/: Cargo.toml
crates/bioscale-fairness-validator/: Cargo.toml
crates/bioscale_evolution_cli/: Cargo.toml
crates/blacklist-trie/: Cargo.toml  README.md
crates/blacklist_filter/: Cargo.toml
crates/blast_radius_kernel/: Cargo.toml
crates/blastradius/: Cargo.toml
crates/bostrom-cli/: Cargo.toml
crates/bostrom-signer/: Cargo.toml
crates/cain_air_node/: Cargo.toml  README.md
crates/cain_placement_opt/: Cargo.toml
crates/cargo-blast-radius/: Cargo.toml
crates/city-pass/: Cargo.toml
crates/community-governance/: Cargo.toml
crates/consent-kernel/: Cargo.toml
eco_restoration_shard/: Cargo.toml
eco_restoration_shard/T08_sensor_health/: Cargo.toml
eco_restoration_shard/T10_pricing/: Cargo.toml
eco_restoration_shard/aln/: ALE-GOV-AUGCIT-DISQUALIFICATION-MERKLE-001.aln  ALE-GOV-KARMA-FUSION-UNDERATTACK-001.aln
eco_restoration_shard/cyboquatic_pi_shadow/: phoenix_canal_reach_shadow_model.c
eco_restoration_shard/cyboquatic_progress/: README.md
eco_restoration_shard/db/: db_agent_views_phoenix.sql  db_ai_chat_metaview.sql  db_definition_registry_restoration.sql  db_econet_stake_terminal_batch.sql  db_ecoperjoule_policy_energy.sql  db_guard_spine_core.sql  db_lanelyapunovker.sql  db_mt6883_lane_continuity.sql  db_phoenix_governance_spine.sql  db_repo_index.sql  db_responsibility_metrics.sql  db_restoration_blastradius_phoenix.sql  db_restoration_identity_binding.sql  db_steward_ecowealth_statement.sql  dbconfig_intelligence_is_sovereign_phoenix.sql  dbdefinitionregistry_completed_ker_ecowealth_phx.sql  dbequation_intelligence_is_sovereign_phoenix.sql  dbequation_intelligence_is_sovereign_register_phoenix.sql  fog_router_log.sql  insert_tasks_monorepo_consolidation.sql  monorepo_task_index.csv  tasks_monorepo_consolidation.sql
eco_restoration_shard/docs/: monorepo_governance_blueprint.md
eco_restoration_shard/hex/: PHX_HEX_ANCHORS.md  phoenix_hex_registry.md
eco_restoration_shard/kerresidual/: Cargo.toml
eco_restoration_shard/lua/: ALE-KO-MINTING-DAEMON-001.lua  cyboquatic_node_scores.lua
eco_restoration_shard/qpudatashards/: LanePromotionReplayPolicyPhoenix2026v1.aln
eco_restoration_shard/sql/: ALE-GOV-AUGCIT-DISQUALIFICATION-REVIEW-001.sql  ALE-GOV-AUGCIT-KARMA-001.sql  ALE-GOV-BOSTROM-CONTRACT-BINDING-001.sql  ALE-GOV-UNDERATTACK-INCIDENT-001.sql
eco_restoration_shard/src/: lib.rs  replay_lane_promotion_phx.rs
eco_wealth/: Cargo.toml
eco_wealth/src/: lib.rs  model.rs  nonactuating.rs  shards.rs  spine.rs  split_dsl.rs  tseries.rs
ecorestorationshard/: Cargo.toml
ecorestorationshard/Eco-Fort/: dbdbcyboquatic_spine_stub.sql  dbdbeconetrepoindex_ecorestorationshard.sql  dbecologicalordertasks_cyboquatic2026.sql
ecorestorationshard/alnregistry/: alnparticleregistry.aln
ecorestorationshard/config/: dailyevolutiondaemon.toml
ecorestorationshard/cyboquatic/: ENGINE_LAYOUT.md
ecorestorationshard/db/: db_bostrom_contract_binding_upgrade.sql  db_evidencehex_upgrade.sql  db_v_ecorestoration_asset_map.sql  db_vcybo_node_eco_metrics.sql  dbequation_consent_radius_phoenix.sql  dbequation_consent_radius_phoenix_register.sql  dbequation_ecoperjoule_sovereign_phoenix.sql  dbequation_ecoperjoule_sovereign_register.sql  dbequation_kpis_phoenix.sql  dbequation_kpis_phoenix_register.sql  dbequationintelligenceissovereignphoenix.sql  dbfilewiring.sql  dbinput_dialogue_switch_phoenix.sql  dbinput_sovereign_check_phoenix.sql  dbkerlane_ecowealth_manifest_phx.sql  dbprompt_divine_restoration_phoenix.sql  dbprompt_template_intelligence_god_phoenix.sql  dbpromptshard.sql  dbpromptshard_insert_neurorights_followup.sql  dbpromptshard_insert_shaming_phoenix.sql  dbpromptshard_insert_sovereign_governance.sql  dbpromptshard_insert_zk_psych_risk_phoenix.sql  dbrepoindex_docs_license_contributing.sql  dbvirtual_security_backup.sql  dffollowup_blast_psych_phoenix.sql  dffollowup_blast_psych_phoenix_register.sql  dq27_missing_identity_bindings.sql  dq28_experimental_contracts_in_use.sql  dq29_governance_lineage_by_path.sql  dq30_governance_db_files_per_region.sql  dq31_monorepotask_dashboard_pivot.sql  dq32_knowledge_particle_shards.sql  dq33_mt6883_neuroethic_breach_nodes.sql  dq35_duplicate_logicalname_contracts.sql  insert_db_ecoperjoule_policy_energy.sql
ecorestorationshard/docs/: IMPLEMENTATION_SUMMARY_AICHAT.md  agent_views_phoenix_api.md  (+1 more)
examples/: CMakeLists.txt  demo_ersi_logger.rs  ecorepoindex.json  non_actuating_workload_policy.json  ppx_diagnostics_demo.py  ppx_local_agent.cpp  ppx_observability_demo.cpp
kerresidual/: Cargo.toml
(+1537 files in other folders)
