# FILE: Cargo.toml
# DESTINATION: ./Cargo.toml
# TARGET-REPO: github.com/mk-bluebird/eco_restoration_shard

[workspace]
members = [
    # Root eco_restoration_shard crate (code in ecorestorationshard/)
    "ecorestorationshard",

    # Crates under `crates/` (matching actual directory names exactly)
    "crates/adaptive-corridors",
    "crates/ai_chat_hashonly_normalizer",
    "crates/bioscale-fairness-validator",
    "crates/bioscale-evolution-cli",
    "crates/blacklist-filter",
    "crates/blast-radius",
    "crates/blast-radius-kernel",
    "crates/bostrom-cli",
    "crates/bostrom-signer",
    "crates/cargo-blast-radius",
    "crates/city-pass",
    "crates/community-governance",
    "crates/constellation-logic-auto",
    "crates/consent-kernel",
    "crates/cross-constellation-index",
    "crates/cyboquatic-benchmark-tool",
    "crates/cyboquatic-ecosafety-core",
    "crates/cyboquatic-index",
    "crates/cyboquatic-spine",
    "crates/datalake-core",
    "crates/definition-registry-checker",
    "crates/disaster-scenarios",
    "crates/eco-chat-ffi",
    "crates/eco-guard-spine",
    "crates/eco-ledger-particles",
    "crates/eco-per-joule",
    "crates/eco-pricing",
    "crates/eco-r-axis-verifier",
    "crates/eco-restoration-governance",
    "crates/eco-restoration-index",
    "crates/eco-restoration-shard",
    "crates/eco-restoration-shard-config",
    "crates/eco-wealth-portfolio",
    "crates/eco-zk-aggregate",
    "crates/ecocybo-planner",
    "crates/econet-blastradius-spine",
    "crates/econet-ceim-phoenix-water",
    "crates/econet-ecowealth",
    "crates/econet-governance-guard",
    "crates/econet-governance-spine",
    "crates/econet-index",
    "crates/econet-index-loader",
    "crates/econet-ker",
    "crates/econet-overlay",
    "crates/econet-governance-summary",
    "crates/ecoresponseshard",
    "crates/ecorestorationshard",
    "crates/ecosafety-core",
    "crates/ecosafety-sqlite-index",
    "crates/education-prompts",
    "crates/energy-metrics",
    "crates/ersilogger",
    "crates/federated-ker",
    "crates/governance-guard",
    "crates/host-sovereignty-envelope",
    "crates/hydraulics-kernels",
    "crates/hydrology-constraints",
    "crates/ker-deployable",
    "crates/ker-residual",
    "crates/ker-score-lab",
    "crates/lake-risk-init",
    "crates/lane-governance",
    "crates/large-particle-registry",
    "crates/neuromorphic-risk",
    "crates/offroad",
    "crates/plane-weights",
    "crates/ppx-continuity-kernel",
    "crates/ppx-continuity-mcp",
    "crates/prometheus-praxis",
    "crates/psychrisk-engine",
    "crates/restoration-radius",
    "crates/round-trip-verify",
    "crates/sensor-health",
    "crates/sensor-telemetry",
    "crates/topology-risk",
    "crates/vocab-guard",
    "crates/zoning-shards"
]

resolver = "2"

[workspace.package]
edition      = "2024"
license      = "MIT OR Apache-2.0"
authors      = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
homepage     = "https://github.com/mk-bluebird/eco_restoration_shard"
repository   = "https://github.com/mk-bluebird/eco_restoration_shard"
rust-version = "1.85"
version      = "0.2.0"
description  = "Eco restoration shard repository with Cyboquatic eco-machinery, KER governance, and EcoNet constellation indexing."

[workspace.dependencies]
# Core non-actuating stack, pinned for deterministic builds
rusqlite   = { version = "0.31.0", default-features = false, features = ["bundled"] }
serde      = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.32"
chrono     = { version = "0.4.38", features = ["serde"] }
thiserror  = "1.0.57"
log        = "0.4.21"
env_logger = "0.11.3"

# Graph and hex utilities
petgraph = "0.6.5"
hex      = "0.4.3"

# Crypto and signatures
ed25519-dalek = "2.1.0"

# Async runtime (non-networked, research band only)
tokio = { version = "1.38.0", features = ["rt", "macros", "time", "io-util", "sync", "fs"] }

# Proc-macro toolchain for internal derives
proc-macro2 = "1.0.85"
quote       = "1.0.36"
syn         = { version = "2.0.72", features = ["full"] }

# Kani verifier (never optional)
kani = { version = "0.67.0" }

[workspace.dev-dependencies]
serde_json = "1.0.120"
csv        = "1.3.0"

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all      = "warn"
pedantic = "warn"
nursery  = "warn"

[profile.dev]
panic           = "abort"
overflow-checks = true

[profile.release]
panic           = "abort"
lto             = "fat"
overflow-checks = true
opt-level       = 2
strip           = "symbols"
codegen-units   = 1

[profile.test]
overflow-checks = true

[profile.bench]
inherits = "release"
strip    = "none"
debug    = true

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
publish    = false
tag-prefix = "v"
sign-tag   = true

[workspace.metadata.aln]
min_schema_version = "1.0.0"
hex_anchor         = "0xECO2026RESTORATIONSHARD_bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"
roh_ceiling        = 0.30

# Root crate: ecorestorationshard

[package]
name         = "ecorestorationshard"
version      = "0.2.0"
edition      = "2024"
license      = "MIT OR Apache-2.0"
authors      = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
repository   = "https://github.com/mk-bluebird/eco_restoration_shard"
rust-version = "1.85"
description  = "Eco restoration shard index and research harness for the EcoNet constellation."
publish      = false

[lib]
name       = "ecorestorationshard"
path       = "ecorestorationshard/src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "restorationindextool"
path = "ecorestorationshard/src/bin/restorationindextool.rs"

[features]
# Default strictly non-actuating index surface.
default       = ["nonactuating"]
nonactuating = []

[dependencies]
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
petgraph      = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
tokio         = { workspace = true }
kani          = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
csv        = { workspace = true }

[patch.crates-io]
# Reserved for audited security / compatibility patches.
