# FILE: Cargo.toml
# DESTINATION: ./Cargo.toml
# TARGET-REPO: https://github.com/mk-bluebird/eco_restoration_shard

[workspace]
members = [
    # Root eco_restoration_shard crate
    "eco_restoration_shard",

    # Root harness / core crates under eco_restoration_shard/
    "eco_restoration_shard/T08_sensor_health",
    "eco_restoration_shard/T10_pricing",
    "eco_restoration_shard/kerresidual",
    "crates/agent-registry",
    "crates/cyboquatic-runner",
    "crates/always-improve-core",

    # eco_wealth standalone crate
    "eco_wealth",

    # ecorestorationshard sub-crates
    "ecorestorationshard/eco_restoration_shard_core",
    "crates/cyboquatic-core",
    "contracts/bee-corridor",
    "contracts/nanoswarm-telemetry",

    # C++ / mixed crates (Rust-compatible build roots if present)
    "cpp/EcoNetCentralAZ",

    # Crates under `crates/` (alphabetically sorted; each must exist as a Rust crate dir)
    "crates/adaptive-corridors",
    "crates/ai_chat_hashonly_normalizer",
    "crates/air_globe_ceim",
    "crates/aln_qpudatashard_parser",
    "crates/bioscale-fairness-validator",
    "crates/bioscale_evolution_cli",
    "crates/blacklist_filter",
    "crates/blast_radius_kernel",
    "crates/blastradius",
    "crates/bostrom-cli",
    "crates/bostrom-signer",
    "crates/cain_placement_opt",
    "crates/cargo-blast-radius",
    "crates/city-pass",
    "crates/community-governance",
    "crates/consent-kernel",
    "crates/constellation-logic-auto",
    "crates/cross-constellation-index",
    "crates/cyboquatic-ecosafety-core",
    "crates/cyboquatic_benchmark_tool",
    "crates/cyboquatic_blastradius_spine",
    "crates/cyboquatic_index",
    "crates/cyboquatic_lane_replay",
    "crates/cyboquatic_progress/20260705_crate",
    "crates/cyboquatic_progress/20260707_crate",
    "crates/cyboquatic_progress/20260708_crate",
    "crates/cyboquatic-qpudatashard",
    "crates/cyboquatic_spine",
    "crates/cyboquationmark_workload",
    "crates/datalake_core",
    "crates/definition_registry_checker",
    "crates/disaster-scenarios",
    "crates/deployment_accountability_core",
    "crates/eco-chat-ffi",
    "crates/eco-governance-spine",
    "crates/eco-guard_spine",
    "crates/eco-ledger-particles",
    "crates/eco-pricing",
    "crates/eco-r_axis_verifier",
    "crates/eco-restoration-governance",
    "crates/eco-wealth-portfolio",
    "crates/eco_zk_aggregate",
    "crates/eco_hamiltonian_gate",
    "crates/eco_restoration_index",
    "crates/eco_restoration_shard",
    "crates/eco_restoration_shard_config",
    "crates/eco_restoration_shard_core",
    "crates/ecocybo_planner",
    "crates/econet-governance-summary",
    "crates/econet-index",
    "crates/econet-index-loader",
    "crates/econet_blastradius_spine",
    "crates/econet_ceim_phoenixwater",
    "crates/econet_ecowealth",
    "crates/econet_governance_guard",
    "crates/econet_governance_spine",
    "crates/econet_ker",
    "crates/econet_overlay",
    "crates/ecoper-joule",
    "crates/ecoresponseshard",
    "crates/ecorestorationshard",
    "crates/ecosafety-core",
    "crates/ecosafety_design_authorship",
    "crates/ecosafety_sqlite_index",
    "crates/ecosafety-nanoswarm-urban-core",
    "crates/education-prompts",
    "crates/energy-metrics",
    "crates/ersilogger",
    "crates/federated-ker",
    "crates/fog_router",
    "crates/governance-guard",
    "crates/heat_corridor",
    "crates/host-sovereignty-envelope",
    "crates/hydraulics-kernels",
    "crates/hydrology-constraints",
    "crates/ker-score-lab",
    "crates/kerdeployable",
    "crates/kerresidual",
    "crates/ktsf_tolerance",
    "crates/lake_risk_init",
    "crates/lane-governance",
    "crates/large-particle-registry",
    "crates/link_compensator",
    "crates/neuromorphic-risk",
    "crates/nanoswarm-consent-kernel",
    "crates/offroad",
    "crates/plane-weights",
    "crates/ppx_continuity_kernel",
    "crates/ppx_continuity_mcp",
    "crates/ppx_minimal_identity_kernel",
    "crates/prometheus_praxis",
    "crates/prometheus_praxis_ai",
    "crates/prometheus_praxis_collective_feed",
    "crates/prometheus-praxis-cyboquatic",
    "crates/prometheus-praxis-lyapunov-guard",
    "crates/prometheus_praxis_provenance",
    "crates/prometheus_praxis_semantics",
    "crates/psychrisk_engine",
    "crates/restoration-radius",
    "crates/round-trip-verify",
    "crates/sensestep_multi_trust",
    "crates/school_zone_mapper",
    "crates/sensor-health",
    "crates/sensor-telemetry",
    "crates/tailwind_fsm",
    "crates/titan-metrics-core",
    "crates/topology-risk",
    "crates/vocab_guard",
    "crates/water_telemetry_ingest",
    "crates/zoning-shards",
    "crates/cain_air_node",
    "crates/alncore",
    "crates/alncore_macros",
    "crates/cyboquatic_progress/20260709_crate",
    "crates/cyboquatic_progress/20260711_crate",
    "crates/cyboquatic-ecosafety-turbine-wl01",
    "crates/cyboquatic-ecosafety-hydroturbine",
    "crates/eco-bee-corridor-envelope",
    "crates/beecorridor-ledger",
    "crates/eco-net-bee",
]

resolver = "2"

[workspace.package]
edition      = "2024"
license      = "MIT OR Apache-2.0"
authors      = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
homepage     = "https://github.com/mk-bluebird/Prometheus-Praxis"
repository   = "https://github.com/mk-bluebird/Prometheus-Praxis"
rust-version = "1.85"
version      = "0.2.0"
description  = "Eco restoration shard repository with Cyboquatic eco-machinery, KER governance, and EcoNet constellation indexing."

[workspace.dependencies]
# Core non-actuating stack, pinned for deterministic builds.
rusqlite      = { version = "0.31.0", default-features = false, features = ["bundled"] }
serde         = { version = "1.0.203", features = ["derive"] }
serde_json    = { version = "1.0.120" }
serde_yaml    = "0.9.32"
chrono        = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
thiserror     = "1.0.57"
log           = "0.4.21"
env_logger    = "0.11.3"

# Graph and hex utilities.
petgraph      = "0.6.5"
hex           = "0.4.3"

# Crypto and signatures (non-blacklisted primitives).
ed25519-dalek = "2.1.0"

# Async runtime (non-networked by policy; used for timers, fs, etc.).
tokio         = { version = "1.38.0", features = ["rt", "macros", "time", "io-util", "sync", "fs"] }

# Proc-macro toolchain for internal derives.
proc-macro2   = "1.0.85"
quote         = "1.0.36"
syn           = { version = "2.0.72", features = ["full"] }

# ALN / MCP integration (globally present; individual crates gate usage via features).
aln-core      = { version = "0.1.0", package = "aletheion-aln-core" }
mcp-core      = { version = "0.1.0", package = "aletheion-mcp-core" }

# Kani verifier (never optional at workspace level).
kani          = { version = "0.67.0", package = "kani-verifier" }

[workspace.dev-dependencies]
serde_json = "1.0.120"
csv        = "1.3.0"
kani       = { version = "0.67.0", package = "kani-verifier" }

[workspace.features]
# Workspace-level feature toggles for integration; Kani remains mandatory.
default = ["sqlite", "aln"]
sqlite  = ["rusqlite"]
aln     = ["aln-core"]
mcp     = ["mcp-core"]

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all      = "warn"
pedantic = "warn"
nursery  = "warn"

[profile.dev]
panic           = "abort"
overflow-checks = true

[profile.release]
panic           = "abort"
lto             = "fat"
overflow-checks = true
opt-level       = 2
strip           = "symbols"
codegen-units   = 1

[profile.test]
overflow-checks = true

[profile.bench]
inherits = "release"
strip    = "none"
debug    = true

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
publish    = false
tag-prefix = "v"
sign-tag   = true

[workspace.metadata.aln]
minschemaversion = "1.0.0"
hexanchor        = "0xECO2026RESTORATIONSHARD_bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"
rohceiling       = 0.30

[workspace.metadata]
ecosafety.non_actuating_only   = true
ecosafety.ecorestoration_spine = true

# Root crate: ecorestorationshard (index / harness for the constellation).
# This crate lives under ./ecorestorationshard and is part of the workspace.

[package]
name         = "ecorestorationshard"
version      = "0.2.0"
edition      = "2024"
license      = "MIT OR Apache-2.0"
authors      = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
repository   = "https://github.com/mk-bluebird/eco_restoration_shard"
rust-version = "1.85"
description  = "Eco restoration shard index and research harness for the EcoNet constellation."
publish      = false

[lib]
name       = "ecorestorationshard"
path       = "ecorestorationshard/src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "restorationindextool"
path = "ecorestorationshard/src/bin/restorationindextool.rs"

[features]
# Default strictly non-actuating index surface; actuation never enabled here.
default      = ["nonactuating"]
nonactuating = []

[dependencies]
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
petgraph      = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
tokio         = { workspace = true }
aln-core      = { workspace = true }
mcp-core      = { workspace = true }
kani          = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
csv        = { workspace = true }
kani       = { workspace = true }

[patch.crates-io]
# Reserved for audited security / compatibility patches; keep empty unless needed.
