# filename: Cargo.toml
# destination: eco_restoration_shard/Cargo.toml

[package]
name = "eco_restoration_shard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Non-actuating RESEARCH-band shard index and research harness for the EcoNet constellation."
repository = "https://github.com/mk-bluebird/eco_restoration_shard"
publish = false

# Workspace: treat this crate as the root of the workspace.
# Additional members (e.g., T08_sensor_health, T10_pricing) can be added here
# once their directories and Cargo.toml files exist.
[workspace]
members = [
    "."
]
resolver = "2"

[features]
default = ["non_actuating"]
# Non-actuating feature ensures this crate stays in diagnostics / research lane.
non_actuating = []

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Non-actuating crate: CI and clippy.toml enforce that this crate does not spawn external
# processes or reach hardware actuators. This manifest stays minimal and research-only.

[lib]
name = "eco_restoration_shard"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "eco_restoration_shard_cli"
path = "src/main.rs"
required-features = ["non_actuating"]
