# 21. kerresidual/Cargo.toml
# filename: kerresidual/Cargo.toml
# destination: kerresidual/Cargo.toml

[package]
name = "kerresidual"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["EcoNet Spine <ecosafety-core@econet>"]
description = "Shared Lyapunov residual and KER math for the ecosafety grammar"
repository = "https://github.com/mk-bluebird/eco_restoration_shard"
readme = "README.md"

[lib]
name = "kerresidual"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
planeweights = { path = "../planeweights" }
