[package]
name = "agent-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["mk-bluebird <host@organichain.local>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
description = "Prometheus-Praxis agent registry and role-band binding core."
keywords = ["prometheus-praxis", "agent-registry", "role-band", "shard-binding"]
categories = ["science", "simulation"]

[lib]
name = "agent_registry"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0"

[dev-dependencies]
kani-verifier = "0.67"

[features]
default = []

[package.metadata.organichain]
hostdid = "didalnorganic-host"
bostromaddress = "bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"
alnauthority = "ALN.MIGRATION.CYBERCOREAUTHORITY.v1"
alnshard.rolebands = "prometheus-role-bands.v1.aln"
alnshard.shards = "prometheus-shard-layout.v1.aln"
role = "AgentRegistryCore"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
