
[package]
name         = "ai_plane_ci_guard"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
description  = "Non-actuating CI guard that rejects AI-plane .aln/.sql files not bound to PHX_AI_DC_GOV_FRAMEWORK_20260716."
repository   = "https://github.com/mk-bluebird/Prometheus-Praxis"

# This crate is a binary-only CI tool; main.rs lives at src/main.rs.
[[bin]]
name = "ai_plane_ci_guard"
path = "src/main.rs"

[dependencies]
serde      = { version = "1.0.203", features = ["derive"] }   # pinned per space instructions
serde_json = { version = "1.0.120" }
rusqlite   = { version = "0.31.0", features = ["bundled"] }
walkdir    = "2.5.0"
thiserror  = "1.0.64"

# Kani must never be optional; included here for verification builds.
# Kani 0.67.0 is a real released version matching your constraint.
kani-verifier = { version = "0.67.0" }

[dev-dependencies]
# Optional test-only helpers can be added here if needed in the future.
