[package]
name = "aln-definition-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "ALN particle registry generator for Prometheus-Praxis"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
authors = ["bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"]

[dependencies]
walkdir = "2.5.0"
regex = "1.10.6"

[dev-dependencies]
kani-verifier = "0.67.0"

[lib]
name = "aln_definition_registry"
path = "src/lib.rs"

[[bin]]
name = "aln-definition-registry"
path = "src/main.rs"
