[package]
name = "alncore"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Core ALN (Artifact Linkage Notation) parser and evaluator for EcoNet governance"
license = "MIT OR Apache-2.0"
keywords = ["aln", "governance", "ecosafety", "parser"]
categories = ["parsing", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "parse_ecosafety"
path = "examples/parse_ecosafety.rs"

[[example]]
name = "parse_phoenix_tray"
path = "examples/parse_phoenix_tray.rs"

[[example]]
name = "parse_cyboquatic_dao_deploy"
path = "examples/parse_cyboquatic_dao_deploy.rs"

[[bin]]
name = "alnctl"
path = "src/bin/alnctl.rs"

[lints.rust]
unsafe_code = "forbid"
