# filename: crates/beecorridor-ledger/Cargo.toml
# destination: github.com/mk-bluebird/Prometheus-Praxis

[package]
name = "beecorridor-ledger"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "BeeCorridorLedger crate: committed-only corridor state, telemetry, and governance for bee-centric nanoswarm safety."
publish = false

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }

[dev-dependencies]
kani-verifier = "0.67"

[features]
default = []
kani = []

[lib]
name = "beecorridor_ledger"
path = "src/lib.rs"
